# signature_gate_near

./: .gitignore  package.json
contract/: Cargo.toml  build.sh  deploy.sh
contract/src/: ed25519.rs  lib.rs
integration-tests/: package-lock.json
integration-tests/src/: main.ava.ts
