[package]
name = "signature_gate"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dev-dependencies]
rand = "0.7.0"

[dependencies]
near-sdk = "4.0.0"
uint = { version = "0.9.3", default-features = false }
ed25519-dalek = "1.0.1"
hex = "0.4.3"
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
